fixing all auth fe and be
