# docs/swagger.json
@@ -15,8 +15,55 @@
         },
         "version": "1.0"
     },
-    "basePath": "/api",
+    "basePath": "/",
     "paths": {
+        "/api/v1/config": {
+            "get": {
+                "description": "Retrieve configuration based on the provided name parameter.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "config"
+                ],
+                "summary": "Get Config",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "post": {
+                "description": "Create new Config",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "config"
+                ],
+                "summary": "Create new Config",
+                "parameters": [
+                    {
+                        "description": "New Config",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ConfigurationRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/auth/login": {
             "post": {
                 "description": "Login user",
@@ -65,53 +112,6 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.RegisterUserRequest"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/v1/config": {
-            "get": {
-                "description": "Retrieve configuration based on the provided name parameter.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "Get Config",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "name",
-                        "name": "name",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            },
-            "post": {
-                "description": "Create new Config",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "config"
-                ],
-                "summary": "Create new Config",
-                "parameters": [
-                    {
-                        "description": "New Config",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ConfigurationRequest"
                         }
                     }
                 ],
